feature/164: User Not Found handling, get user, confirm email, update user, change role, delete user,